--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@ layout: home
 	  <div class="avatar">
 		<img class="img-circle" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
 	  </div>
-	  <h3>I'm <strong>{{ site.author }}</strong>, a Software Engineer.</h3>
-	  <h3>I love all things computer science and maths.</h3>
-	  <h3>Have a look at some of my working <a href="{{ site.baseurl }}projects.html"> projects</a>.</h3>
-	  <h3>For more check out my academic &amp; professional <a href="http://jekyller.github.io/vitae">Resume</a>.</h3>
-	  <h3>Contact me at <a href="http://twitter.com/{{ site.twitter }}">@{{ site.twitter }}</a> or by <a href="mailto:{{ site.email }}">email</a>.</h3>
+	  <h3>
+	Saiyam is a Software Engineer working on a multi-cloud kubernetes project at Walmart Labs with a focus on creating and managing the Machine Learning ecosystem. Previously at HP and Oracle, Saiyam has worked on many facets of k8s including scaling, multi-cloud, managed k8s services, and k8s documentation. He’s worked on implementing Rancher and Influx in different organizations.
+When not coding, Saiyam works on contributing to the community by writing blogs and organizing local meetups for k8s, rancher, Influx. He is also an Influx ACE, CNCF ambassador and can be reached on twitter @saiyampathak.</h3>
 	  {% include social.html %}
 	</div>
 </section>
